fix: resolve bottom row alignment for better visual

--- a/Layout/MainLayout.razor.css
+++ b/Layout/MainLayout.razor.css
@@ -90,10 +90,10 @@ main {
     background-color: #f7f7f7;
     border-top: 1px solid #d6d5d5;
     justify-content: flex-start;
-    height: 2.75rem;
+    height: 3.37rem;
     display: flex;
     align-items: center;
     position: sticky;
     bottom: 0px;
-    padding: 12px 12px;
+    padding: 0px 12px;
 }
